add new presentation

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>tg-option-container | Thorgate knowledge sharing</title>
+        <title>Django Channels | Thorgate knowledge sharing</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/headjs/1.0.3/head.min.js"></script>
 
